@@ -1,6 +1,7 @@
 2009-04-10  Martin Kutschker  <masi@typo3.org>
 
 	* Fixed bug #10866: extra extJS onready code not loaded with template.php
+	* Fixed bug #10867: extJS localization doesn't work
 
 2009-04-09  Stanislas Rolland  <typo3@sjbr.ca>
 
